<resources>
    <string name="app_name">Cstore Gurus</string>
    <string name="app_tag_text">Discover &amp; connect with great\nlocal business</string>
    <string name="lets_get_started">Let\'s get started</string>
    <string name="onBoarding_title_1">Smart Office</string>
    <string name="onBoarding_title_2">Smart Office</string>
    <string name="onBoarding_title_3">Smart Office</string>
    <string name="onBoarding_desc_1">Welcome to the\nCstore Gurus Office.</string>
    <string name="onBoarding_desc_2">Welcome to the\nCstore Gurus Office.</string>
    <string name="onBoarding_desc_3">Welcome to the\nCstore Gurus Office.</string>
    <string name="close">Close</string>
    <string name="skip">Skip</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome">Welcome</string>
    <string name="txt_continue">Continue</string>
    <string name="content_description_end_icon">icon description</string>
    <string name="new_member">New member? Sign Up</string>
    <string name="already_member">Already a member? Sign In</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="txt_login_description">Enter your email and password\nto login</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="send">Send</string>
    <string name="privacy_policy"><a href="https://prawindroid.blogspot.com/">Privacy Policy</a>  and  <a href="https://prawindroid.blogspot.com/">Terms and conditions</a> </string>
    <string name="select_store">Select store</string>
    <string name="forgot_password_link">Forgot password\nreset link</string>
    <string name="dashboard">Dashboard</string>
    <string name="profile">Profile</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="internet_alert_title">NO INTERNET</string>
    <string name="internet_alert_message">Please check your internet connection.</string>
    <string name="ok">OK</string>
    <string name="logout_alert_title">LOGOUT</string>
    <string name="logout_alert_message">Are you sure you want to logout?</string>
    <string name="success">Success</string>
    <string name="error">Error</string>
    <string name="cancel">Cancel</string>
    <string name="pos_live">POS Live</string>
    <string name="pos_closing_sales">POS Closing Sales</string>
    <string name="day_sales">Day Sales/Recon</string>
    <string name="transactions">Transactions</string>
    <string name="fuel_price">Fuel Price</string>
    <string name="fuel_inventory">Fuel Inventory</string>
    <string name="account">Account</string>
    <string name="inventory">Inventory</string>
    <string name="lottery">Lottery</string>
    <string name="financials">Financials</string>
    <string name="purchases">Purchases</string>
    <string name="groups">Groups</string>
    <string name="order">Order</string>
    <string name="check_in_out">Check In/Out</string>
    <string name="send_to_pos">Send to POS</string>
    <string name="date_from">Date From</string>
    <string name="date_to">Date To</string>
    <string name="select_date">Select date</string>
    <string name="trans_date">Trans Date :</string>
    <string name="dash">-</string>
    <string name="trans_type">Trans Type :</string>
    <string name="amount">Amount :</string>
    <string name="cashier_with_dots">Cashier :</string>
    <string name="no_result_found">No result found</string>
    <string name="cashier">Cashier</string>
    <string name="amount_without_dot">Amount</string>
    <string name="transactions_details">Transactions details</string>
    <string name="total">Total</string>
    <string name="tax">Tax</string>
    <string name="subtotal">Sub Total</string>
    <string name="quantity">Qty :</string>
    <string name="upc">UPC :</string>
    <string name="dept">Dept :</string>
    <string name="desc">Desc :</string>
    <string name="description">Description</string>
    <string name="merchandiseSalesButtonText">Merchandise Sales</string>
    <string name="fuelSalesButtonText">Fuel Sales</string>
    <string name="addNewPurchasesButtonText">Add New Purchases</string>
    <string name="confirm">Confirm</string>
    <string name="active">Active</string>
    <string name="sales">Sales</string>
    <string name="newPriceGroupButtonText">Create new price group</string>
    <string name="adjustment">Adjustment</string>
    <string name="inventory_count">Inv. Count</string>
    <string name="quantity_text">Quantity</string>
    <string name="profit_loss">Profit &amp; Loss</string>
    <string name="balance_sheet">Balance Sheet</string>
    <string name="transaction_details">Transaction details</string>
    <string name="un_retailed">Un-Retailed</string>
    <string name="current_quantity_text">Current quantity</string>
    <string name="item_wise">Item-wise</string>
    <string name="scan_multiple_items">Scan multiple item</string>
    <string name="unit_case">Unit/Case</string>
    <string name="case_cost">Case/Cost</string>
    <string name="case_disc">Case Disc</string>
    <string name="extd_cost">Extd cost</string>
    <string name="unit_retail">Unit retails</string>
    <string name="margin">Margin</string>
    <string name="price_tab">Price</string>
    <string name="promo_tab">Promo</string>
    <string name="search_text">Search here</string>
    <string name="create_new_promo_group">Create new promo group</string>
    <string name="enter_group_name">Enter group name</string>
    <string name="submit">Submit</string>
    <string name="scan">Scan</string>
    <string name="date">Date</string>
    <string name="scan_code">Scan code</string>
    <string name="current_quantity">Current quantity</string>
    <string name="save">Save</string>
    <string name="view_count">View count</string>
    <string name="reset">Reset</string>
    <string-array name="groups_tab_title_array">
        <item>@string/price_tab</item>
        <item>@string/promo_tab</item>
    </string-array>
    <string-array name="add_purchases_tab_title_array">
        <item>@string/item_wise</item>
        <item>@string/scan_multiple_items</item>
    </string-array>
    <string-array name="lottery_tab_title_array">
        <item>@string/confirm</item>
        <item>@string/active</item>
        <item>@string/sales</item>
    </string-array>
    <string-array name="inventory_tab_title_array">
        <item>@string/inventory_count</item>
        <item>@string/adjustment</item>
    </string-array>
    <string-array name="financials_tab_title_array">
        <item>@string/profit_loss</item>
        <item>@string/balance_sheet</item>
    </string-array>
    <string-array name="purchases_tab_title_array">
        <item>@string/un_retailed</item>
        <item>@string/purchases</item>
    </string-array>
    <string name="daily">Daily</string>
    <string name="monthly">Monthly</string>
    <string name="fuel_grade_no">Fuel grade no :</string>
    <string name="fuel_grade_name">Fuel grade name :</string>
    <string name="fuel_department">Fuel department :</string>
    <string name="tax_with_dot">Tax :</string>
    <string name="tank_size">Tank size :</string>
    <string name="pre_paid_sales_tax">Pre-paid sales tax :</string>
    <string name="tax_rate">Tax rate :</string>
    <string name="ust_fees">UST fees :</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="fuel_type">Fuel Type</string>
    <string name="activate_date">Activate Date</string>
    <string name="roll_no">Roll Number</string>
    <string name="deal_no">Deal Number</string>
    <string name="no_tickets">No of Tickets</string>
    <string name="activate">Activate</string>
    <string name="gallon_sold">Gallon Sold</string>
    <string name="current_inve">Current Inve.</string>
    <string name="regular">Regular</string>
    <string name="super_fuel">Super</string>
    <string name="power">Power</string>
    <string name="fuel_sales">Fuel sales</string>
    <string name="void_text">Void</string>
    <string name="line_void">Line void</string>
    <string name="refund">Refund</string>
    <string name="safe_drop">Safe drop</string>
    <string name="paid_out">Paid out</string>
    <string name="paid_in">Paid in</string>
    <string name="show_details">Show details</string>
    <string name="diesel">Diesel</string>
    <string name="vol_sold">Vol. sold</string>
    <string name="profit">Profit</string>
    <string name="department">Department</string>
    <string name="net">Net</string>
    <string name="sales_percentage">Sales(%)</string>
    <string name="current_cash_price">Current cash price</string>
    <string name="new_cash_price">New cash price</string>
    <string name="new_cash_price_hint">New cash price\n($__ x)</string>
    <string name="current_credit_price">Current credit price</string>
    <string name="new_credit_price">New credit price</string>
    <string name="new_credit_price_hint">New credit price\n($__ x)</string>
    <string name="last_modified">Last modified</string>
    <string name="edit_fuel_price">Edit fuel price</string>
    <string name="end_balance">End balance</string>
    <string name="type_payee">Type/Payee</string>
    <string-array name="merchandise_sales_dropdown_array">
        <item>@string/sales</item>
        <item>@string/daily</item>
        <item>@string/monthly</item>
    </string-array>
    <string name="payee_item_one">941 tax</string>
    <string name="payee_item_two">942 tax</string>
    <string name="payee_item_three">943 tax</string>
    <string-array name="payee_dropdown_array">
        <item>@string/payee_item_one</item>
        <item>@string/payee_item_two</item>
        <item>@string/payee_item_three</item>
    </string-array>
    <string name="new_order">New order</string>
    <string-array name="order_type">
        <item>@string/existing_order</item>
        <item>@string/new_order</item>
    </string-array>
    <string name="bank_one">Fuel Bal-FWD</string>
    <string name="bank_two">Fuel Bal-FWD</string>
    <string name="bank_three">Fuel Bal-FWD</string>
    <string-array name="bank_dropdown_array">
        <item>@string/bank_one</item>
        <item>@string/bank_two</item>
        <item>@string/bank_three</item>
    </string-array>
    <string name="auto_part">Auto parts</string>
    <string name="beer">Beer</string>
    <string name="chips">Chips</string>
    <string name="description_product_code_upc">Description/Product code/UPC</string>
    <string name="reason">Reason</string>
    <string name="data">Data</string>
    <string name="count">Count</string>
    <string name="open_new_day">Open new day</string>
    <string name="pack_no">Pack no.</string>
    <string name="game_no">Game no.</string>
    <string name="end_no">End no.</string>
    <string name="revenue">Revenue</string>
    <string name="gross_profit">Gross profit</string>
    <string name="net_income">Net income</string>
    <string name="assets">Assets</string>
    <string name="other_assets">Other assets</string>
    <string name="grocery_inventory">Grocery inventory</string>
    <string name="operating_expanses">Operating expanses</string>
    <string name="liabilities">Liabilities</string>
    <string name="current_liabilities">Current liabilities</string>
    <string name="add_new_order">Add new order</string>
    <string name="type">Type</string>
    <string name="payee">Payee</string>
</resources>