<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="14dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtTitle"
        style="@style/AppSmallTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingVertical="8dp"
        android:text="@string/create_new_promo_group"
        android:textColor="@color/gray_variant"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTextGroupName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_group_name"
        app:boxBackgroundColor="@android:color/white"
        app:boxStrokeColor="@color/gray_variant2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="50"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancelButton"
        style="@style/ButtonStyleRoundedFilledDisabled"
        android:layout_width="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toStartOf="@id/submitButton"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailTextGroupName"
        app:layout_constraintWidth_percent=".4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submitButton"
        style="@style/ButtonStyleRoundedFilled"
        android:layout_width="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cancelButton"
        app:layout_constraintTop_toBottomOf="@id/emailTextGroupName"
        app:layout_constraintWidth_percent=".4" />

</androidx.constraintlayout.widget.ConstraintLayout>