<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/MatchContentLayout"
    android:layoutAnimation="@anim/layout_controller">

  <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textviewLogo"
        style="@style/TextAppearance.Display2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textColor="@color/secondary_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonLogin"
        style="@style/ButtonStyleRoundedFilled"
        android:layout_width="match_parent"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="72dp"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textColor="@color/primary_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonCreateAccount"
        style="@style/ButtonStyleRoundedFilled"
        android:layout_width="match_parent"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="52dp"
        android:text="@string/create_account"
        android:textAllCaps="true"
        app:layout_constraintBottom_toTopOf="@id/buttonLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/onBoardingDescription"
        style="@style/TextAppearance.Medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="18dp"
        android:text="@string/discover_amp_connect_with_great_local_business"
        android:textColor="@color/gray_variant"
        app:layout_constraintBottom_toTopOf="@id/buttonCreateAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/onBoardingTitle"
        style="@style/OnBoardingTitleTextStyle"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="52dp"
        android:text="@string/welcome"
        app:layout_constraintBottom_toTopOf="@id/onBoardingDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>